# google_machine_learning_cc

./: .gitignore  README.md  main.py  pyproject.toml
linear_regression/: README.md  main.py
linear_regression/lib/: build_model.py  make_predictions.py  training_model.py
linear_regression/src/: dataAnalysis.py
logistic_regression/: main.py
logistic_regression/lib/: build_model.py  data_analysis.py  evaluate_model.py  ploting.py
